@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.2.3
-Date: 2020-2-21
+Date: 2020-2-22
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
