@@ -20,7 +20,7 @@ export(AE3, ab, allele.recode, a2g, asplot,
    inv_chr_pos_a1_a2, invlogit, invnormal,
    KCC, k, klem, kin.morgan,
    LD22, LDkl, lambda1000, logit, log10p, logp,
-   METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2, mhtplot2d, mhtplot.trunc, mht.control,
+   METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2, mhtplot2d, mhtplot3d, mhtplot.trunc, mht.control,
         mia, miamiplot, micombine, mtdt, mtdt2, muvar, mvmeta,
    PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score,
    qqfun, qqunif,
