@@ -1,7 +1,9 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.3
-21-02-2020	Add bat data example for MCMCgrm on a query from Shengjing Song <songsj455@nenu.edu.cn>
+22-02-2020	Add bat data example for MCMCgrm on a query from Shengjing Song <songsj455@nenu.edu.cn>
+		Add cols, prefix, postfix options to d3json()
+		Add mhtplot3d()
 19-02-2020	Add details on N to METAL_forestplot.Rd due to query/flag of a typo
 		from Savita Karthikeyan <sk752@medschl.cam.ac.uk>
 14-02-2020	Add d3json and plot option to  mhtplot2d
